updating isi data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -776,6 +776,17 @@
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Arora2005,
+  author    = {Arora, S. and Berger, E. and Kindler, G. and Safra, M. and Hazan, E.},
+  title     = {On Non-Approximability for Quadratic Programs},
+  booktitle = {46th Annual IEEE Symposium on Foundations of Computer Science},
+  year      = {2005},
+  doi       = {10.1109/sfcs.2005.57},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+}
+
 @Article{Art2005,
   author    = {Art, R. J. and Brooks, S. G. and Wohlforth, W. C. and Lieber, K. A. and Alexander, G.},
   title     = {Correspondence: Striking the Balance},
@@ -1402,6 +1413,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.05},
+}
+
+@Book{Berry1988,
+  title     = {Market Centers and Retail Location: Theory and Application},
+  publisher = {Prentice-Hall},
+  year      = {1988},
+  author    = {Berry, B. J. L. and Parr, J. B.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+  url       = {https://searchworks.stanford.edu/view/10027339},
 }
 
 @Book{Bezdek1981,
@@ -2852,6 +2874,19 @@
   timestamp = {2017.03.25},
 }
 
+@Book{Cohen2010,
+  title     = {Complex Networks - Structure, Robustness and Function},
+  publisher = {Cambridge University Press},
+  year      = {2010},
+  author    = {Cohen, R. and Havlin, S.},
+  address   = {Cambridge, UK},
+  file      = {:Complex Networks - Structure, Robustness and Function.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.10.17},
+  url       = {http://books.google.com/books?id=1ECLiFrKulIC&dq=complex+networks+havlin&source=gbs_navlinks_s},
+}
+
 @InCollection{Commander2009,
   author    = {Commander, C. W.},
   title     = {Maximum Cut Problem, MAX-CUT},
@@ -3688,6 +3723,17 @@
   timestamp = {2017.07.02},
 }
 
+@Book{Egami2003,
+  title     = {Underneath the Bragg Peaks: Structural Analysis of Complex Materials},
+  publisher = {Pergamon},
+  year      = {2003},
+  author    = {Egami, T. and Billinge, S.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+  url       = {https://www.elsevier.com/books/underneath-the-bragg-peaks/egami/978-0-08-097133-9},
+}
+
 @InCollection{Ekioglu2002,
   author    = {Ekşioglu, S. D. and Pardalos, P. M. and Resende, M. G. C.},
   title     = {Parallel Metaheuristics for Combinatorial Optimization},
@@ -3753,6 +3799,18 @@
   owner     = {Vincent},
   timestamp = {2017.07.04},
   url       = {http://dl.acm.org/citation.cfm?id=1611638.1611641},
+}
+
+@InCollection{Emanuel2003,
+  author    = {Emanuel, D. and Fiat, A.},
+  title     = {Correlation Clustering - Minimizing Disagreements on Arbitrary Weighted Graphs},
+  booktitle = {European Symposium on Algorithms},
+  year      = {2003},
+  pages     = {208-220},
+  doi       = {10.1007/978-3-540-39658-1_21},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
 }
 
 @Article{Eppstein1994,
@@ -4058,6 +4116,42 @@
   timestamp = {2017.06.22},
 }
 
+@InProceedings{FernandezdelaVega1998,
+  author    = {Fernandez de la Vega, W. and Kenyon, C.},
+  title     = {A randomized approximation scheme for metric MAX-CUT},
+  booktitle = {39th Annual Symposium on Foundations of Computer Science},
+  year      = {1998},
+  doi       = {10.1109/sfcs.1998.743497},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+}
+
+@Article{FernandezdelaVega2001,
+  author    = {Fernandez de la Vega, W. and Kenyon, C.},
+  title     = {A Randomized Approximation Scheme for Metric MAX-CUT},
+  journal   = {Journal of Computer and System Sciences},
+  year      = {2001},
+  volume    = {63},
+  number    = {4},
+  pages     = {531-541},
+  doi       = {10.1006/jcss.2001.1772},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+}
+
+@InProceedings{FernandezdelaVega2003,
+  author    = {Fernandez de la Vega, W. and Karpinski, M. and Kenyon, C. and Rabani, Y.},
+  title     = {Approximation schemes for clustering problems},
+  booktitle = {35th ACM Symposium on Theory of Computing},
+  year      = {2003},
+  doi       = {10.1145/780542.780550},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+}
+
 @Article{Festa2002,
   author    = {Festa, P. and Pardalos, P. M. and Resende, M. G. C. and Ribeiro, C. C.},
   title     = {Randomized heuristics for the Max-Cut problem},
@@ -4171,6 +4265,22 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.07.22},
+}
+
+@Article{FontouraCosta2007,
+  author    = {da Fontoura Costa, L. and Rodrigues, F. A. and Travieso, G. and Villas Boas, P. R.},
+  title     = {Characterization of complex networks: A survey of measurements},
+  journal   = {Advances in Physics},
+  year      = {2007},
+  volume    = {56},
+  number    = {1},
+  pages     = {167-242},
+  doi       = {10.1080/00018730601170527},
+  file      = {:Characterization of complex networks- A survey of measurements.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  review    = {arXiv: http://arxiv.org/abs/cond-mat/0505185},
+  timestamp = {2010.06.03},
 }
 
 @Article{Fortunato2007a,
@@ -6119,6 +6229,17 @@
   timestamp     = {2017.05.08},
 }
 
+@InProceedings{Indyk1999,
+  author    = {Indyk, P.},
+  title     = {A sublinear time approximation scheme for clustering in metric spaces},
+  booktitle = {40th Annual Symposium on Foundations of Computer Science},
+  year      = {1999},
+  doi       = {10.1109/sffcs.1999.814587},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+}
+
 @Article{Inohara1998,
   author    = {Inohara, T. and Takahashi, S. and Nakano, B.},
   title     = {On conditions for a meeting not to reach a deadlock},
@@ -6231,6 +6352,34 @@
   groups    = {Graph Partitioning, Found},
   owner     = {Vincent},
   timestamp = {2017.03.26},
+}
+
+@Article{Jeong2000,
+  author    = {Jeong, H. and Tombor, B. and Albert, R. and Oltvai, Z. and Barabási, A.-L.},
+  title     = {The large-scale organization of metabolic networks},
+  journal   = {Nature},
+  year      = {2000},
+  volume    = {407},
+  pages     = {651-655},
+  doi       = {10.1038/35036627},
+  file      = {:The large-scale organization of metabolic networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.12.21},
+}
+
+@Article{Ji2011,
+  author    = {Jin, D. and Liu, J. and Yang, B. and He, D.-X. and Liu, D.-Y.},
+  title     = {Genetic algorithm with local search for community detection in large-scale complex networks},
+  journal   = {Acta Automatica Sinica},
+  year      = {2011},
+  volume    = {37},
+  number    = {7},
+  pages     = {873-882},
+  doi       = {10.3724/SP.J.1004.2011.00873},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
 }
 
 @Article{Jia2011,
@@ -7574,6 +7723,18 @@
   groups        = {Graph Partitioning, Found},
   owner         = {Vincent},
   timestamp     = {2017.06.01},
+}
+
+@Article{Levorato2017,
+  author    = {Levorato, M. and Frota, Y.},
+  title     = {Brazilian Congress structural balance analysis},
+  journal   = {Journal of Interdisciplinary Methodologies and Issues in Sciences},
+  year      = {2017},
+  volume    = {2},
+  doi       = {10.18713/JIMIS-280217-2-3},
+  file      = {:Brazilian Congress structural balance analysis.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.07.06},
 }
 
 @Article{Levorato2017a,
@@ -9004,7 +9165,9 @@
   pages     = {189-195},
   doi       = {10.1177/001872676702000207},
   groups    = {Others, Ignored},
+  owner     = {Vincent},
   publisher = {{SAGE} Publications},
+  timestamp = {2017.07.04},
 }
 
 @TechReport{Moscato1989,
@@ -9366,6 +9529,18 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Book{Newman2010,
+  title     = {Networks: An Introduction},
+  publisher = {Oxford University Press},
+  year      = {2010},
+  author    = {Newman, M. E. J.},
+  file      = {:Networks- An Introduction.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.10.05},
+  url       = {https://global.oup.com/academic/product/networks-9780199206650?cc=fr&lang=en&},
 }
 
 @Article{Newman2012,
@@ -9757,6 +9932,29 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@Book{Pascual2006,
+  title     = {Ecological Networks: Linking Structure to Dynamics in Food Webs},
+  publisher = {Oxford University Press},
+  year      = {2006},
+  author    = {Pascual, M. and Dunne, J. A.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+  url       = {https://global.oup.com/academic/product/ecological-networks-9780195188165},
+}
+
+@Book{Pastor-Satorras2004,
+  title     = {Evolution and structure of the Internet: a statistical physics approach},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  author    = {Pastor-Satorras, R. and Vespignani, A.},
+  file      = {:Evolution and structure of the Internet - A statistical physics approach.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://dl.acm.org/citation.cfm?id=1534810},
 }
 
 @Article{Peixoto2013a,
@@ -10793,6 +10991,17 @@
   timestamp = {2017.06.15},
 }
 
+@Book{Scott2000,
+  title     = {Social Network Analysis},
+  publisher = {Sage Publications},
+  year      = {2000},
+  author    = {Scott, J.},
+  file      = {:Social Network Analysis, A Handbook.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {https://us.sagepub.com/en-us/nam/the-sage-handbook-of-social-network-analysis/book232753},
+}
+
 @Article{Sedoc2016,
   author        = {Sedoc, J. and Gallier, J. and Ungar, L. and Foster, D.},
   title         = {Semantic Word Clusters Using Signed Normalized Graph Cuts},
@@ -10967,6 +11176,20 @@
   owner     = {Vincent},
   timestamp = {2017.06.14},
   url       = {http://www.utdallas.edu/~tyler.summers/papers/ShamesSummersCantoni2014.pdf},
+}
+
+@Article{Shamir2004,
+  author    = {Shamir, R. and Sharan, R. and Tsur, D.},
+  title     = {Cluster graph modification problems},
+  journal   = {Discrete Applied Mathematics},
+  year      = {2004},
+  volume    = {144},
+  number    = {1-2},
+  pages     = {173-182},
+  doi       = {10.1016/j.dam.2004.01.007},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
 }
 
 @Article{Shang2014b,
@@ -11328,6 +11551,31 @@
   groups    = {Others},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Singh2017a,
+  author    = {Singh, R. and Adhikari, B.},
+  title     = {Measuring the balance of signed networks and its application to sign prediction},
+  journal   = {Journal of Statistical Mechanics},
+  year      = {2017},
+  doi       = {10.1088/1742-5468/aa73ef},
+  file      = {:Measuring the balance of signed networks and its application to sign prediction.pdf:PDF},
+  groups    = {Graph Partitioning, _To do},
+  owner     = {Vincent},
+  timestamp = {2017.07.06},
+}
+
+@Article{Sinha2017,
+  author    = {Sinha, D. Sharma, D.},
+  title     = {Iterated local transitivity model for signed social networks},
+  journal   = {Applicable Algebra in Engineering, Communication and Computing},
+  year      = {2017},
+  volume    = {in press},
+  doi       = {10.1007/s00200-017-0333-z},
+  file      = {:Iterated local transitivity model for signed social networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.06},
 }
 
 @InProceedings{Sinkkonen2007,
@@ -11707,6 +11955,16 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@InProceedings{Swamy2004,
+  author    = {Swamy, C.},
+  title     = {Correlation Clustering: maximizing agreements via semidefinite programming},
+  booktitle = {15th annual ACM-SIAM symposium on Discrete algorithms},
+  year      = {2004},
+  owner     = {Vincent},
+  timestamp = {2017.07.10},
+  url       = {http://dl.acm.org/citation.cfm?id=982866},
 }
 
 @Article{Symeonidis2013,
@@ -13524,7 +13782,7 @@
   timestamp = {2017.06.29},
 }
 
-@InCollection{Zhou2004b,
+@InCollection{Zhou2004,
   author    = {Zhou, H. and Lipowsky, R.},
   title     = {Network Brownian Motion: A New Method to Measure Vertex-Vertex Proximity and to Identify Communities and Subcommunities},
   booktitle = {International Conference on Computational Science},
