updating isi data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1185,6 +1185,19 @@
   timestamp = {2017.06.30},
 }
 
+@Article{Batagelj1998,
+  author    = {Batagelj, V. and Mrvar, A.},
+  title     = {Pajek - Program for Large Network Analysis},
+  journal   = {Connections},
+  year      = {1998},
+  volume    = {21},
+  pages     = {47-57},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://vlado.fmf.uni-lj.si/pub%20/Networks/doc/pajek.pdf},
+}
+
 @InCollection{Batagelj2004a,
   author    = {Batagelj, V. and Mrvar, A.},
   title     = {Pajek - Analysis and Visualization of Large Networks},
@@ -1276,6 +1289,31 @@
   owner     = {Vincent},
   timestamp = {2016.03.23},
   url       = {http://arxiv.org/abs/1603.06878},
+}
+
+@InProceedings{Bejerano2003,
+  author    = {Bejerano, Y. and Immorlica, N. and Naor, J. S. and Smith, M.},
+  title     = {Efficient location area planning for personal communication systems},
+  booktitle = {9th annual international conference on Mobile computing and networking},
+  year      = {2003},
+  doi       = {10.1145/938985.938997},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+}
+
+@Article{Bejerano2006,
+  author    = {Bejerano, Y. and Smith, A. and Naor, J. and Immorlica, N.},
+  title     = {Efficient location area planning for personal communication systems},
+  journal   = {IEEE/ACM Transactions on Networking},
+  year      = {2006},
+  volume    = {14},
+  number    = {2},
+  pages     = {438-450},
+  doi       = {10.1109/tnet.2006.872555},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
 }
 
 @Article{Belardo2014,
@@ -1724,6 +1762,17 @@
   timestamp = {2011.06.02},
 }
 
+@Book{Borgatti2002,
+  title     = {Ucinet for Windows: Software for Social Network Analysis},
+  publisher = {Analytic Technologies},
+  year      = {2002},
+  author    = {Borgatti, S. P. and Everett, M. G. and Freeman, L. C},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://www.researchgate.net/publication/216636663_UCINET_for_Windows_Software_for_social_network_analysis},
+}
+
 @Article{Borgatti2009a,
   author    = {Borgatti, S. P. and Mehra, A. and Brass, D. J. and Labianca, G.},
   title     = {Network Analysis in the Social Sciences},
@@ -1963,6 +2012,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Book{Brusco2005,
+  title     = {Branch-and-Bound Applications in Combinatorial Data Analysis},
+  publisher = {Springer},
+  year      = {2005},
+  author    = {Brusco, M. J. and Stahl, S.},
+  doi       = {10.1007/0-387-28810-4},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
 }
 
 @Article{Brusco2006,
@@ -3871,6 +3931,18 @@
   timestamp = {2015.10.09},
 }
 
+@Article{Ester1998,
+  author    = {Ester, M. and Kriegel, H.-P. and Sander, J. and Xu, X.},
+  title     = {Clustering for mining in large spatial databases},
+  journal   = {KI-Journal},
+  year      = {1998},
+  volume    = {1},
+  pages     = {18-24},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://pdfs.semanticscholar.org/a273/806321a1871dc3b90c1c68345f4e32639ff7.pdf},
+}
+
 @Article{Estrada2011,
   author    = {Estrada, E.},
   title     = {Community detection based on network communicability},
@@ -5294,6 +5366,17 @@
   timestamp = {2017.06.28},
 }
 
+@Book{Hand1981,
+  title     = {Discrimination and Classification},
+  publisher = {John Wiley},
+  year      = {1981},
+  author    = {Hand, D. J.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://books.google.fr/books/about/Discrimination_and_classification.html?id=YxrvAAAAMAAJ},
+}
+
 @Article{Hanney2005,
   author    = {Hanney, S. and Frame, I. and Grant, J. and Buxton, M. and Young, T. and Lewison, G.},
   title     = {Using categorisations of citations when assessing the outcomes from health research},
@@ -5806,6 +5889,17 @@
   timestamp = {2017.06.29},
 }
 
+@Book{Homans1950,
+  title     = {The human group},
+  publisher = {Harcourt-Brace},
+  year      = {1950},
+  author    = {Homans, G. C.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://books.google.fr/books/about/The_Human_Group.html?id=OmZWeLrvPnkC},
+}
+
 @Article{Honey2009,
   author    = {Honey, C. J. and Sporns, O. and Cammoun, L. and Gigandet, X. and Thiran, J. P. and Meuli, R. and Hagmann, P.},
   title     = {Predicting human resting-state functional connectivity from structural connectivity},
@@ -6046,6 +6140,20 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Hubert1974b,
+  author    = {Hubert, L.},
+  title     = {Some applications of graph theory and related nonmetric techniques to problems of approximate seriation: The case of symmetric proximity measures},
+  journal   = {British Journal of Mathematical and Statistical Psychology},
+  year      = {1974},
+  volume    = {27},
+  number    = {2},
+  pages     = {133-153},
+  doi       = {10.1111/j.2044-8317.1974.tb00534.x},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+}
+
 @Article{Hubert1976,
   author    = {Hubert, L. J. and Levin, J. R.},
   title     = {A general statistical framework for assessing categorical clustering in free recall},
@@ -6127,6 +6235,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Hummon1995,
+  author    = {Hummon, N. P. and Fararo, T. J.},
+  title     = {Assessing hierarchy and balance in dynamic network models},
+  journal   = {Journal of Mathematical Sociology},
+  year      = {1995},
+  volume    = {20},
+  number    = {2-3},
+  pages     = {145-159},
+  doi       = {10.1080/0022250x.1995.9990159},
+  groups    = {Just balance, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
 }
 
 @Article{Hummon2003,
@@ -6295,6 +6417,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@InProceedings{Jain1999a,
+  author    = {Jain, K. and Vazirani, V. V.},
+  title     = {Primal-dual approximation algorithms for metric facility location and k-median problems},
+  booktitle = {40th Annual Symposium on Foundations of Computer Science},
+  year      = {1999},
+  doi       = {10.1109/sffcs.1999.814571},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
 }
 
 @Article{Jalili2017,
@@ -6887,6 +7020,18 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@InProceedings{Klein2002,
+  author    = {Klein, D. and Kamvar, S. D. and Manning, C. D.},
+  title     = {From instance-level constraints to space-level constraints: making the most of prior knowledge in data clustering},
+  booktitle = {9th International Conference on Machine Learning},
+  year      = {2002},
+  pages     = {307-314},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=655989},
 }
 
 @Article{Kleinberg1999,
@@ -7602,6 +7747,17 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Book{Leik1975,
+  title     = {Mathematical Sociology},
+  publisher = {Prentice Hall},
+  year      = {1975},
+  author    = {Leik, R. K. and Meeker, B. F.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://books.google.fr/books/about/Mathematical_sociology.html?id=3Pe1AAAAIAAJ},
 }
 
 @Article{Lemann1952,
@@ -8874,6 +9030,18 @@
   timestamp = {2017.06.30},
 }
 
+@InProceedings{Meila1998,
+  author    = {Meilă, M. and Heckerman, D.},
+  title     = {An experimental comparison of several clustering and initialization methods},
+  booktitle = {14th conference on Uncertainty in artificial intelligence},
+  year      = {1998},
+  pages     = {386-395},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=2074140},
+}
+
 @Article{Mennes2013,
   author    = {Mennes, M. and Biswal, B. and Castellanos, F. X. and Milham, M. P.},
   title     = {Making data sharing work: The FCP/INDI experience},
@@ -9599,6 +9767,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Book{Nooy2005,
+  title     = {Exploratory Social Network Analysis with Pajek},
+  publisher = {Cambridge University Press},
+  year      = {2005},
+  author    = {de Nooy, W. and Mrvar, A. and Batagelj, V.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=2181139},
 }
 
 @Article{Norman1972,
@@ -10539,6 +10718,17 @@
   timestamp = {2010.11.22},
 }
 
+@InProceedings{Reingold2000,
+  author    = {Reingold, O. and Vadhan, S. and Wigderson, A.},
+  title     = {Entropy waves, the zig-zag graph product, and new constant-degree expanders and extractors},
+  booktitle = {41st Annual Symposium on Foundations of Computer Science},
+  year      = {2000},
+  doi       = {10.1109/sfcs.2000.892006},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+}
+
 @Article{Ren2009,
   author    = {Ren, W. and Yan, G. and Liao, X. and Xiao, L.},
   title     = {Simple probabilistic algorithm for detecting community structure},
@@ -10613,6 +10803,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Book{Roberts1976,
+  title     = {Discrete Mathematical Models with Applications to Social, Biological, and Environmental Problems},
+  publisher = {Prentice-Hall},
+  year      = {1976},
+  author    = {Roberts, F. S.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://www.pearson.com/us/higher-education/program/Roberts-Discrete-Mathematical-Models-with-Applications-to-Social-Biological-and-Environmental-Problems/PGM253290.html},
 }
 
 @Article{Robins2008,
@@ -10960,6 +11161,17 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2011.01.01},
+}
+
+@InProceedings{Schulman2000,
+  author    = {Schulman, L. J.},
+  title     = {Clustering for edge-cost minimization},
+  booktitle = {32nd Annual ACM Symposium on Theory of Computing},
+  year      = {2000},
+  doi       = {10.1145/335305.335373},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
 }
 
 @Article{Schwartz1984,
@@ -11772,6 +11984,17 @@
   timestamp = {2017.07.01},
 }
 
+@InProceedings{Steinbach2000,
+  author    = {Steinbach, M. and Karypis, G. and Kumar, V.},
+  title     = {A comparison of document clustering techniques},
+  booktitle = {KDD Workshop on Text Mining},
+  year      = {2000},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {https://pdfs.semanticscholar.org/c110/0f525044b2b926f7bd7f407ce7b0157bcfd8.pdf},
+}
+
 @Article{Steinley2003,
   author    = {Steinley, D.},
   title     = {Local Optima in K-Means Clustering: What You Don't Know May Hurt You},
@@ -12519,6 +12742,17 @@
   timestamp = {2017.07.04},
 }
 
+@Book{Vazirani2003,
+  title     = {Approximation Algorithms},
+  publisher = {Springer},
+  year      = {2003},
+  author    = {Vazirani, V. V.},
+  doi       = {10.1007/978-3-662-04565-7},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+}
+
 @Article{Vazquez2008,
   author    = {Vazquez, A.},
   title     = {Population stratification using a statistical model on hypergraphs},
@@ -12623,6 +12857,29 @@
   groups    = {Datasets, Ignored},
   owner     = {Vincent},
   timestamp = {2017.04.18},
+}
+
+@InProceedings{Wagstaff2000,
+  author    = {Wagstaff, K. and Cardie, C.},
+  title     = {Clustering with instance-level constraints},
+  booktitle = {7th International Conference on Machine Learning},
+  year      = {2000},
+  pages     = {1103-1110},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=658275},
+}
+
+@InProceedings{Wagstaff2001,
+  author    = {Wagstaff, K. and Cardie, C. and Rogers, S. and Schrödl, S.},
+  title     = {Constrained K-means clustering with background knowledge},
+  booktitle = {8th International Conference on Machine Learning},
+  year      = {2001},
+  pages     = {577-584},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=655669},
 }
 
 @PhdThesis{Wahid2017,
@@ -13337,6 +13594,18 @@
   groups        = {Graph Partitioning, _To do},
   owner         = {Vincent},
   timestamp     = {2017.05.18},
+}
+
+@InProceedings{Yannakakis1983,
+  author    = {Yannakakis, M. and Kanellakis, P. C. and Cosmadakis, S. S. and Papadimitriou, C. H.},
+  title     = {Cutting and Partitioning a Graph aifter a Fixed Pattern},
+  booktitle = {10th Colloquium on Automata, Languages and Programming},
+  year      = {1983},
+  pages     = {712-722},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.11},
+  url       = {http://dl.acm.org/citation.cfm?id=683043},
 }
 
 @Article{Yap2015,
