must solve the duplicate problem

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1453,6 +1453,17 @@
   timestamp = {2017.07.05},
 }
 
+@Book{Bernstein2009,
+  title     = {Matrix Mathematics: Theory, Facts, and Formulas},
+  publisher = {Princeton University Press},
+  year      = {2009},
+  author    = {Bernstein, D. S.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+  url       = {http://press.princeton.edu/titles/8961.html},
+}
+
 @Book{Berry1988,
   title     = {Market Centers and Retail Location: Theory and Application},
   publisher = {Prentice-Hall},
@@ -1927,6 +1938,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Bronski2015,
+  author    = {Bronski, J. and DeVille, L. and Koutsaki, K. P.},
+  title     = {The spectral index of signed Laplacians and their structural stability},
+  journal   = {arXiv},
+  year      = {2015},
+  volume    = {math.DS},
+  pages     = {1503.01069},
+  file      = {:The spectral index of signed Laplacians and their structural stability.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+  url       = {https://arxiv.org/abs/1503.01069},
 }
 
 @Article{Bronski2016,
@@ -2415,6 +2440,20 @@
   timestamp = {2017.07.02},
 }
 
+@Article{Caughman2006,
+  author    = {Caughman, J. S. and Veerman, J.},
+  title     = {Kernels of directed graph Laplacians},
+  journal   = {Electronic Journal of Combinatorics},
+  year      = {2006},
+  volume    = {13},
+  number    = {1},
+  pages     = {R39},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+  url       = {http://www.emis.ams.org/journals/EJC/Volume_13/PDF/v13i1r39.pdf},
+}
+
 @Article{Chaiken1982,
   author    = {Chaiken, S.},
   title     = {A Combinatorial Proof of the All Minors Matrix Tree Theorem},
@@ -2733,7 +2772,7 @@
   author    = {Chen, W. and Liu, J. and Chen, Y. and Khong, S. Z. and Wang, D. and Başar, T. and Qiu, L. and Johansson, K. H.},
   title     = {Characterizing the positive semidefiniteness of signed Laplacians via Effective Resistances},
   booktitle = {55th IEEE Conference on Decision and Control},
-  year      = {2017},
+  year      = {2016},
   doi       = {10.1109/CDC.2016.7798396},
   file      = {:Characterizing the positive semidefiniteness of signed Laplacians via Effective Resistances.pdf:PDF},
   groups    = {Others, Ignored},
@@ -3331,6 +3370,18 @@
   owner     = {Vincent},
   timestamp = {2012.09.30},
   url       = {http://www.jstor.org/stable/2984875},
+}
+
+@InProceedings{denBesten2001,
+  author    = {den Besten, M. and Stützle, T. and Dorigo, M.},
+  title     = {Design of Iterated Local Search Algorithms},
+  booktitle = {Workshops on Applications of Evolutionary Computation},
+  year      = {2001},
+  pages     = {441-451},
+  doi       = {10.1007/3-540-45365-2_46},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @Article{Deng2012,
@@ -4722,6 +4773,19 @@
   timestamp = {2017.06.29},
 }
 
+@Book{Gendreau2010,
+  title     = {Handbook of Metaheuristics},
+  publisher = {Springer},
+  year      = {2010},
+  author    = {Gendreau, M. and Potvin, J.},
+  volume    = {146},
+  series    = {International Series in Operations Research \& Management Science},
+  doi       = {10.1007/978-1-4419-1665-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
 @Article{Germina2011,
   author        = {Germina, K. A. and Hameed, S. K. and Zaslavsky, T.},
   title         = {On products and line graphs of signed graphs, their eigenvalues and energy},
@@ -5107,6 +5171,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Book{Gropp1998,
+  title     = {MPI - The Complete Reference},
+  publisher = {MIT Press},
+  year      = {1998},
+  author    = {Gropp, W. and Huss-Lederman, S. and Lumsdaine, A. and Lusk, E. and Nitzberg, B. and Saphir, W. and Snir, M.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+  url       = {https://mitpress.mit.edu/books/mpi-complete-reference-1},
 }
 
 @Article{Groshaus2010,
@@ -5926,6 +6001,17 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.07.30},
+}
+
+@Book{Hoppensteadt1997,
+  title     = {Weakly Connected Neural Networks},
+  publisher = {Springer},
+  year      = {1997},
+  author    = {Hoppensteadt, F. C. and Izhikevich, E. M.},
+  doi       = {10.1007/978-1-4612-1828-9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @Article{Hotelling1929,
@@ -8448,6 +8534,21 @@
   timestamp = {2017.07.01},
 }
 
+@InCollection{Lourenco2003,
+  author    = {Lourenço, H. R. and Martin, O. C. and Stützle, T.},
+  title     = {Iterated Local Search},
+  booktitle = {Handbook of Metaheuristics},
+  publisher = {Kluwer Academic Publishers},
+  year      = {2003},
+  volume    = {57},
+  series    = {International Series in Operations Research \& Management Science},
+  pages     = {320-353},
+  doi       = {10.1007/0-306-48056-5_11},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
 @Article{Lozano2007a,
   author    = {Lozano, S. and Duch, J. and Arenas, A.},
   title     = {Analysis of large social datasets by community detection},
@@ -8799,6 +8900,21 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@InCollection{Marti2003,
+  author    = {Martí, R.},
+  title     = {Multi-Start Methods},
+  booktitle = {Handbook of Metaheuristics},
+  publisher = {Kluwer Academic Publishers},
+  year      = {2003},
+  volume    = {57},
+  series    = {International Series in Operations Research \& Management Science},
+  pages     = {355-368},
+  doi       = {10.1007/0-306-48056-5_12},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @Article{Marvel2009,
@@ -9421,6 +9537,17 @@
   groups        = {Graph Partitioning, Found},
   owner         = {Vincent},
   timestamp     = {2017.05.11},
+}
+
+@InProceedings{Mukherjee2016,
+  author    = {Mukherjee, D. and Zelazo, D.},
+  title     = {Consensus over weighted digraphs: A robustness perspective},
+  booktitle = {55th IEEE Conference on Decision and Control},
+  year      = {2016},
+  doi       = {10.1109/cdc.2016.7798784},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @InProceedings{Murata2017,
@@ -11378,6 +11505,20 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Shames2011,
+  author    = {Shames, I. and Teixeira, A. M. H. and Sandberg, H. and Johansson, K. H.},
+  title     = {Distributed fault detection for interconnected second-order systems},
+  journal   = {Automatica},
+  year      = {2011},
+  volume    = {47},
+  number    = {12},
+  pages     = {2757-2764},
+  doi       = {10.1016/j.automatica.2011.09.011},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
 @InProceedings{Shames2014,
   author    = {Shames, I. and Summers, T. H. and Cantoni , M.},
   title     = {Manipulating Factions Evolved in Signed Networks},
@@ -12377,6 +12518,17 @@
   timestamp = {2017.06.29},
 }
 
+@InProceedings{Teixeira2010,
+  author    = {Teixeira, A. and Sandberg, H. and Johansson, K. H.},
+  title     = {Networked control systems under cyber attacks with applications to power networks},
+  booktitle = {American Control Conference},
+  year      = {2010},
+  doi       = {10.1109/acc.2010.5530638},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
 @InProceedings{Teixeira2017,
   author        = {Teixeira, A. S. and Santos, F. C. and Francisco, A. P.},
   title         = {Emergence of Social Balance in Signed Networks},
@@ -12740,6 +12892,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.04},
+}
+
+@Article{Varela1999,
+  author    = {Varela, F. J. and Rodriguez, E. and George, N. and Lachaux, J.-P. and Martinerie, J. and Renault, B.},
+  title     = {Perception's shadow: long-distance synchronization of human brain activity},
+  journal   = {Nature},
+  year      = {1999},
+  volume    = {397},
+  number    = {6718},
+  pages     = {430-433},
+  doi       = {10.1038/17120},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @Book{Vazirani2003,
@@ -13661,6 +13827,31 @@
   url       = {http://www.abebooks.com/servlet/BookDetailsPL?bi=7154284694&searchurl=isbn%3D0521082234},
 }
 
+@InProceedings{Young2010,
+  author    = {Young, G. F. and Scardovi, L. and Leonard, N. E.},
+  title     = {Robustness of noisy consensus dynamics with directed communication},
+  booktitle = {American Control Conference},
+  year      = {2010},
+  doi       = {10.1109/acc.2010.5531506},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
+@Article{Young2016,
+  author    = {Young, J. H.},
+  title     = {A New Notion of Effective Resistance for Directed Graphs - Part I: Definition and Properties},
+  journal   = {IEEE Transactions on Automatic Control},
+  year      = {2016},
+  volume    = {61},
+  number    = {7},
+  pages     = {1727-1736},
+  doi       = {10.1109/TAC.2015.2481978},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
+}
+
 @InProceedings{Yu2003,
   author        = {Yu, S. X. and Shi, J.},
   title         = {Multiclass spectral clustering},
@@ -13803,6 +13994,20 @@
   owner         = {Vincent},
   timestamp     = {2017.05.03},
   url           = {http://people.math.binghamton.edu/zaslav/Tpapers/balance-clusterability.slides.20100726.pdf},
+}
+
+@Article{Zelazo2017,
+  author    = {Zelazo, D. and Burger, M.},
+  title     = {On the Robustness of Uncertain Consensus Networks},
+  journal   = {IEEE Transactions on Control of Network Systems},
+  year      = {2017},
+  volume    = {4},
+  number    = {2},
+  pages     = {170-178},
+  doi       = {10.1109/tcns.2015.2485458},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.07.12},
 }
 
 @InProceedings{Zeng2015,
